# rag-demo

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  agent.py  config.py  crud_create.py  crud_delete.py  crud_read.py  crud_update.py  ingest.py  llm.py  main.py  milvus_compat.py  milvus_raw.py  vectorstore.py
backend/data/: milvus_faq.md
docs/: RAG-with-Milvus-技术分享.md
frontend/: .env.example  next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/api/chat/: route.ts
frontend/components/: ChatBox.tsx
